--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,10 @@
         "Declaraciones",
         "Hecho",
         "Hechos",
-        "Pensamientos"
+        "Mostrar",
+        "opinión",
+        "Pensamientos",
+        "resultados"
     ],
     "liveServer.settings.port": 5501
 }
