--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.words": [
+        "correcta",
         "Declaraciones",
         "Hecho",
         "Hechos",
+        "incorrecta",
         "Mostrar",
         "opinión",
         "Pensamientos",
+        "respuesta",
         "resultados"
     ],
     "liveServer.settings.port": 5501
