--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,12 @@
         "Hecho",
         "Hechos",
         "incorrecta",
+        "Marcaste",
         "Mostrar",
         "opinión",
+        "OPINIONES",
         "Pensamientos",
+        "pregunta",
         "respuesta",
         "resultados"
     ],
